--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,34 @@
-// TODO
+.contentContainer {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 2rem;
+
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    margin-top: 50px;
+    font-size: 36px;
+    line-height: 140%;
+  }
+
+  p {
+    color: var(--gray-300);
+    margin-top: 10px;
+    font-size: 18px;
+    line-height: 140%;
+  }
+}
+
+.contentImage {
+  width: 440px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.postImage {
+  width: 440px;
+  height: 400px;
+  margin: 0 auto;
+}
