--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,14 @@
-// TODO
+.icons {
+    margin-top: 1rem;
+    width: 40%;
+     
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  
+    span {
+      font-size: 14px;
+      width: 120px;
+    }
+  }
+  
